[MNG-7554] Use JDK immutable collections